took everything out

--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@
          </code>
          </pre>
          </article>
+         <a href="src/custags.min.js" download="custags.min.js"><download-btn>Download Minified</download-btn></a>
    </div>
    <div class="section s2">
       <topic-name>Use "Ω" or "omega" <br> Do amazing things</topic-name>
-      <pre>
+      <pre class="line-numbers">
          <code class="language-js">
             Ω('weather-module').register(div);
             Ω.detectAdBlock('mild', 'Please disable your adBlocker to help us earn');
@@ -50,7 +51,7 @@
    <link rel="stylesheet" href="css/fullpage.min.css">
    <script src="js/fullpage.min.js"></script>
    <script src="js/prism.js"></script>
-   <script src="src/custags.min.js"></script>
+   <script src="custags.min.js"></script>
    <script src="js/main.js"></script>
 </body>
 </html>
