update many website files

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <div class="section head">
          <topic-name>Custags.js</topic-name>
          <sub-topic>Custom elements, now a reality.</sub-topic>
-         <article>
-            <pre>
+         <code-container>
+            <pre style="max-width: 50%; overflow: scroll;">
          <code class="language-html" style="max-width: 50vh; overflow: scroll;">
             &lt;!-- Looks like XML, does work like HTML--&gt;
             &lt;weather-module&gt;
@@ -24,12 +24,12 @@
             &lt;/weather-module&gt; 
          </code>
          </pre>
-         </article>
+         </code-container>
          <a href="src/custags.min.js" download="custags.min.js"><download-btn>Download Minified</download-btn></a>
    </div>
    <div class="section s2">
-      <topic-name>Use "Ω" or "omega" <br> Do amazing things</topic-name>
-      <pre class="line-numbers">
+      <topic-name>Loads of things to do</topic-name>
+      <pre style="max-width: 50%; overflow: scroll;">
          <code class="language-js">
             Ω('weather-module').register(div);
             Ω.detectAdBlock('mild', 'Please disable your adBlocker to help us earn');
@@ -46,12 +46,12 @@
       </pre>
    </div>
    </main-wrap>
-   <link rel="stylesheet" href="css/styles.css">
-   <link rel="stylesheet" href="css/prism.css">
-   <link rel="stylesheet" href="css/fullpage.min.css">
-   <script src="js/fullpage.min.js"></script>
-   <script src="js/prism.js"></script>
+   <link rel="stylesheet" href="dist/index/css/styles.css">
+   <link rel="stylesheet" href="dist/index/css/prism.css">
+   <link rel="stylesheet" href="dist/index/css/fullpage.min.css">
+   <script src="dist/index/js/fullpage.min.js"></script>
+   <script src="dist/index/js/prism.js"></script>
    <script src="custags.min.js"></script>
-   <script src="js/main.js"></script>
+   <script src="dist/index/js/main.js"></script>
 </body>
 </html>
