--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
          </code>
       </pre>
    </div>
+   <div class="section links">
+      <topic-name>Links</topic-name>
+      <go-to href="dist/ready-load.html">ready()</go-to>
+   </div>
    </main-wrap>
    <link rel="stylesheet" href="dist/index/css/styles.css">
    <link rel="stylesheet" href="dist/index/css/prism.css">
