--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
    </div>
    <div class="section links">
       <topic-name>Links</topic-name>
-      <go-to href="dist/ready-load.html">ready()</go-to>
+      <go-to href="dist/ready-load.html">ready() and load()</go-to>
    </div>
    </main-wrap>
    <link rel="stylesheet" href="dist/index/css/styles.css">
