fix broken link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
          </code>
          </pre>
          </code-container>
-         <a href="src/custags.min.js" download="custags.min.js"><download-btn>Download Minified</download-btn></a>
+         <a href="/custags.min.js" download="custags.min.js"><download-btn>Download Minified</download-btn></a>
    </div>
    <div class="section s2">
       <topic-name>Loads of things to do</topic-name>
