--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
    </div>
    <div class="section links">
       <topic-name>Links</topic-name>
-      <go-to href="dist/ready-load.html">ready() and load()</go-to>
+      <ul>
+      <li><go-to href="dist/ready-load.html">ready() and load()</go-to></li>
+      <li><go-to href="dist/register.html">register()</go-to></li>
+      </ul>
    </div>
    </main-wrap>
    <link rel="stylesheet" href="dist/index/css/styles.css">
