more styles add

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
          </pre>
          </code-container>
          <a href="/custags.min.js" download="custags.min.js"><download-btn>Download Minified</download-btn></a>
+         <a href="/custags.js" download="custags.js"><download-btn>Download Original</download-btn></a>
    </div>
    <div class="section s2">
       <topic-name>Loads of things to do</topic-name>
