--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
          <topic-name>Custags.js</topic-name>
          <sub-topic>Custom elements, now a reality.</sub-topic>
          <code-container>
-            <pre style="max-width: 50%; overflow: scroll;">
-         <code class="language-html" style="max-width: 50vh; overflow: scroll;">
+            <pre style="max-width: 50%;">
+         <code class="language-html" style="max-width: 50vh;">
             &lt;!-- Looks like XML, does work like HTML--&gt;
             &lt;weather-module&gt;
             &lt;weather-icon src="pics/cloudy.png"&gt;&lt;/weather-icon&gt;
@@ -30,7 +30,7 @@
    </div>
    <div class="section s2">
       <topic-name>Loads of things to do</topic-name>
-      <pre style="max-width: 50%; overflow: scroll;">
+      <pre style="max-width: 50%;">
          <code class="language-js">
             Ω('weather-module').register(div);
             Ω.detectAdBlock('mild', 'Please disable your adBlocker to help us earn');
@@ -51,6 +51,7 @@
       <ul>
       <li><go-to href="dist/ready-load.html">ready() and load()</go-to></li>
       <li><go-to href="dist/register.html">register()</go-to></li>
+      <li><go-to href="dist/html.html">html()</go-to></li>
       </ul>
    </div>
    </main-wrap>
